k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: backend-deployment
spec:
 replicas: 1
 selector:
  matchLabels:
   component: backend
 template:
  metadata:
   labels:
    component: backend
  spec:
   containers:
    - name: backend
      image: damnda/backend-ang-kub:latest
      ports:
       - containerPort: 3000
