k8s/frontend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: frontend-cluster-ip-service
spec:
 type: ClusterIP
 selector:
  component: frontend
 ports:
  - port: 3000
    targetPort: 3000
